--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -84,3 +84,33 @@ spring.security.oauth2.client.registration.facebook.client-name=Facebook
 spring.security.oauth2.client.registration.facebook.scope=email,public_profile
 spring.security.oauth2.client.registration.facebook.redirect-uri={baseUrl}/login/oauth2/code/facebook
 
+
+# Google OAuth2 Configuration
+spring.config.import=optional:classpath:application-secrets.properties
+
+
+spring.security.oauth2.client.registration.google.client-id=
+spring.security.oauth2.client.registration.google.client-secret=
+spring.security.oauth2.client.registration.google.client-name=Google
+spring.security.oauth2.client.registration.google.scope=openid,profile,email
+spring.security.oauth2.client.registration.google.redirect-uri={baseUrl}/login/oauth2/code/{registrationId}
+
+# Explicit provider settings (sometimes required)
+spring.security.oauth2.client.provider.google.authorization-uri=https://accounts.google.com/o/oauth2/v2/auth
+spring.security.oauth2.client.provider.google.token-uri=https://oauth2.googleapis.com/token
+spring.security.oauth2.client.provider.google.user-info-uri=https://openidconnect.googleapis.com/v1/userinfo
+spring.security.oauth2.client.provider.google.user-name-attribute=sub
+
+
+
+#email
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=
+spring.mail.password=
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+
+
+# src/main/resources/application.properties
+google.maps.api.key=
