--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -44,6 +44,9 @@ STRIPE_SECRET_KEY=
 STRIPE_WEBHOOK_SECRET_KEY=
 
 
+#Social configuration
+spring.config.import=optional:classpath:application-secrets.properties
+
 #LinkedIn OAuth2 Configuration
 spring.security.oauth2.client.registration.linkedin.client-id=YOUR_LINKEDIN_CLIENT_ID
 spring.security.oauth2.client.registration.linkedin.client-secret=YOUR_LINKEDIN_CLIENT_SECRET
@@ -57,38 +60,51 @@ spring.security.oauth2.client.provider.linkedin.token-uri=https://www.linkedin.c
 spring.security.oauth2.client.provider.linkedin.user-info-uri=https://api.linkedin.com/v2/me
 spring.security.oauth2.client.provider.linkedin.user-name-attribute=id
 
-#Twitter OAuth2 Configuration
+# Twitter OAuth2 Configuration
 spring.security.oauth2.client.registration.twitter.client-id=YOUR_TWITTER_CLIENT_ID
 spring.security.oauth2.client.registration.twitter.client-secret=YOUR_TWITTER_CLIENT_SECRET
 spring.security.oauth2.client.registration.twitter.client-name=Twitter
 spring.security.oauth2.client.registration.twitter.authorization-grant-type=authorization_code
 spring.security.oauth2.client.registration.twitter.redirect-uri={baseUrl}/login/oauth2/code/{registrationId}
-spring.security.oauth2.client.registration.twitter.scope=tweet.read,users.read
+spring.security.oauth2.client.registration.twitter.scope=tweet.read,users.read,offline.access
 
+# Explicit provider settings (sometimes required)
 spring.security.oauth2.client.provider.twitter.authorization-uri=https://twitter.com/i/oauth2/authorize
 spring.security.oauth2.client.provider.twitter.token-uri=https://api.twitter.com/2/oauth2/token
 spring.security.oauth2.client.provider.twitter.user-info-uri=https://api.twitter.com/2/users/me
 spring.security.oauth2.client.provider.twitter.user-name-attribute=id
 
-#GitHub OAuth2 Configuration
-spring.security.oauth2.client.registration.github.client-id=YOUR_GITHUB_CLIENT_ID
-spring.security.oauth2.client.registration.github.client-secret=YOUR_GITHUB_CLIENT_SECRET
+
+# GitHub OAuth2 Configuration
+spring.security.oauth2.client.registration.github.client-id=
+spring.security.oauth2.client.registration.github.client-secret=
 spring.security.oauth2.client.registration.github.client-name=GitHub
 spring.security.oauth2.client.registration.github.scope=user:email
-spring.security.oauth2.client.registration.github.redirect-uri={baseUrl}/login/oauth2/code/github
+spring.security.oauth2.client.registration.github.redirect-uri={baseUrl}/login/oauth2/code/{registrationId}
 
-#Facebook OAuth2 Configuration
+# Explicit provider settings
+spring.security.oauth2.client.provider.github.authorization-uri=https://github.com/login/oauth/authorize
+spring.security.oauth2.client.provider.github.token-uri=https://github.com/login/oauth/access_token
+spring.security.oauth2.client.provider.github.user-info-uri=https://api.github.com/user
+spring.security.oauth2.client.provider.github.user-name-attribute=id
+
+
+# Facebook OAuth2 Configuration
 spring.security.oauth2.client.registration.facebook.client-id=YOUR_FACEBOOK_CLIENT_ID
 spring.security.oauth2.client.registration.facebook.client-secret=YOUR_FACEBOOK_CLIENT_SECRET
 spring.security.oauth2.client.registration.facebook.client-name=Facebook
 spring.security.oauth2.client.registration.facebook.scope=email,public_profile
-spring.security.oauth2.client.registration.facebook.redirect-uri={baseUrl}/login/oauth2/code/facebook
+spring.security.oauth2.client.registration.facebook.redirect-uri={baseUrl}/login/oauth2/code/{registrationId}
+
+# Explicit provider settings (sometimes required)
+spring.security.oauth2.client.provider.facebook.authorization-uri=https://www.facebook.com/v16.0/dialog/oauth
+spring.security.oauth2.client.provider.facebook.token-uri=https://graph.facebook.com/v16.0/oauth/access_token
+spring.security.oauth2.client.provider.facebook.user-info-uri=https://graph.facebook.com/me?fields=id,first_name,last_name,name,email
+spring.security.oauth2.client.provider.facebook.user-name-attribute=id
+
 
 
 # Google OAuth2 Configuration
-spring.config.import=optional:classpath:application-secrets.properties
-
-
 spring.security.oauth2.client.registration.google.client-id=
 spring.security.oauth2.client.registration.google.client-secret=
 spring.security.oauth2.client.registration.google.client-name=Google
